# war3parser

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md  deno.json  justfile  package.json  war3parser.d.ts  war3parser.js  war3parser_bg.wasm  war3parser_bg.wasm.d.ts
.github/workflows/: build.yml  release-cli.yml  release.yml
assets/: (6)BlizzardTD.w3x
bindings/: FogStyle.ts  ForceData.ts  GameVersion.ts  GameVersionCode.ts  MapFlags.ts  MapSize.ts  PlayerData.ts  RandomItemSet.ts  RandomItemTable.ts  RandomTablePositionType.ts  RandomUnitSet.ts  RandomUnitTable.ts  TechAvailability.ts  Tileset.ts  UpgradeAvailability.ts  W3iFile.ts
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/lib/: Cargo.toml
crates/lib/src/: lib.rs  war3map_metadata.rs
crates/lib/src/parser/: binary_reader.rs  error.rs  mod.rs
crates/lib/src/parser/blp/: mod.rs
crates/lib/src/parser/img/: mod.rs
crates/lib/src/parser/imp/: mod.rs
crates/lib/src/parser/tga/: mod.rs
crates/lib/src/parser/w3i/: force.rs  mod.rs  player.rs  random_item_table.rs  random_unit_table.rs  tech_availability_change.rs  upgrade_availability_change.rs
crates/lib/src/parser/w3x/: mod.rs
crates/lib/src/parser/wtg/: mod.rs
crates/lib/src/parser/wts/: mod.rs
crates/lib/tests/: extract.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: impls.rs  lib.rs  mapinfo.rs  types.rs
crates/wasm/src/types/: mod.rs  utils.rs  wasm_image.rs  wasm_w3i.rs  wasm_wts.rs
crates/wasm/tests/: wasm.rs
src/: extractor.rs  lib.rs  preview.rs
src/parser/: globals.rs  mod.rs  w3i.rs  w3i_impl.rs  w3i_parser.rs  w3parser.rs  w3str.rs  wts.rs
tests/: extractor.rs  ut.rs  wasm.ts
war3parser/: Cargo.toml
war3parser-cli/: Cargo.toml
war3parser-cli/src/: main.rs
war3parser-wasm/: Cargo.toml  index.js  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json
war3parser-wasm/src/: extractor.rs
war3parser-wasm/test/: index.test.js  index.test.ts
war3parser/src/: extractor.rs  lib.rs
war3parser/src/parser/: w3i.rs  w3i_impl.rs  w3str.rs
war3parser/tests/: ut.rs
