[workspace]
resolver = "2"
members = ["packages/lib", "packages/cli", "packages/wasm"]

[workspace.package]
version = "0.0.3"

[workspace.dependencies]
image = "0.24.3"
image-blp = "1.2.0"
serde = "1.0.204"
serde_json = "1.0.135"
thiserror = "2.0.11"
wasm-bindgen = "0.2.100"
web-sys = "0.3.77"
photon-rs = { git = "https://github.com/silvia-odwyer/photon.git", rev = "941adf9d2a60f9b92a2b8016b5036033dbffb192" }
