[package]
name = "war3parser"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
derivative = "2.2.0"
enum-display = "0.1.4"
image = "0.24.3"
image-blp = "1.2.0"
mpq = "0.8.0"
nom = "7.1.3"
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
ts-rs = "9.0.1"
wasm-bindgen = "0.2.92"
