[package]
name = "war3parser-cli"
version = "0.1.2"
edition.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
war3parser = { package = "war3parser", path = "../lib", version = "0.1.0" }
clap = { version = "4.5.9", features = ["derive"] }
anyhow = "1.0.95"
