[package]
name = "war3parser"
version.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binary-reader = "0.4.5"
image = { workspace = true }
image-blp = { workspace = true }
mpq = "0.8.0"
regex = "1.10.5"
thiserror = { workspace = true }
base64 = "0.22.1"
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
tsify-next = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }

[features]
default = ["wasm"]
serde = ["dep:serde", "dep:serde_json"]
wasm = ["serde", "dep:tsify-next", "dep:wasm-bindgen"]
