[package]
name = "war3parser-wasm"
version = "0.1.1"
edition.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "../../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
war3parser = { package = "war3parser", path = "../lib", version = "0.1.0" }
web-sys = { workspace = true, features = ["ImageData"] }
wasm-bindgen = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
