[package]
name = "war3parser-wasm"
version.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "../../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.77"
serde = { workspace = true, features = ["derive"] }
tsify-next = { workspace = true }
war3parser = { package = "war3parser", path = "../lib", version = "0.3.0", features = ["wasm"] }
wasm-bindgen = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
